[gd_scene load_steps=6 format=3 uid="uid://bxtqflr2vn3o4"]

[ext_resource type="Theme" uid="uid://cgihxoevv7qgc" path="res://ui/01_atoms/theme.tres" id="1"]
[ext_resource type="PackedScene" uid="uid://brhpxl8pukdr" path="res://ui/03_organisms/select_list/select_list.tscn" id="2"]
[ext_resource type="Script" path="res://ui/03_organisms/party_submenu/party_submenu.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://chqcjur8n17ah" path="res://ui/01_atoms/assets/icons/By ssugmi/icon-party.png" id="6"]
[ext_resource type="PackedScene" path="res://ui/02_molecules/party_member_stats/party_member_stats.tscn" id="8"]

[node name="PartySubmenu" type="PanelContainer"]
offset_left = -1.0
offset_right = 319.0
offset_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1")
script = ExtResource("4")
icon = ExtResource("6")

[node name="VSplitContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ItemList" parent="VSplitContainer/HBoxContainer" instance=ExtResource("2")]
visible = false
layout_mode = 2
include_cancel_button = true
toggle = false

[node name="PartyList" parent="VSplitContainer/HBoxContainer" instance=ExtResource("2")]
layout_mode = 2
size_flags_horizontal = 8
handle_cancel = false

[node name="VSeparator" type="VSeparator" parent="VSplitContainer/HBoxContainer"]
layout_mode = 2

[node name="PartyMemberStats" parent="VSplitContainer/HBoxContainer" instance=ExtResource("8")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="VSplitContainer"]
layout_mode = 2

[node name="InfoPanel" type="PanelContainer" parent="VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Info" type="Label" parent="VSplitContainer/InfoPanel"]
layout_mode = 2
text = "Press [X] to auto sort items"

[connection signal="element_focused" from="VSplitContainer/HBoxContainer/PartyList" to="VSplitContainer/HBoxContainer/PartyMemberStats" method="on_party_member_focused"]
[connection signal="element_selected" from="VSplitContainer/HBoxContainer/PartyList" to="VSplitContainer/HBoxContainer/PartyMemberStats" method="on_party_member_selected"]
[connection signal="focus_released" from="VSplitContainer/HBoxContainer/PartyMemberStats" to="VSplitContainer/HBoxContainer/PartyList" method="grab_focus"]
[connection signal="item_requested" from="VSplitContainer/HBoxContainer/PartyMemberStats" to="." method="on_item_requested"]
